@@ -1982,10 +1982,15 @@ void usage(void)
 "  -d  arg tells to show debug info. Multiple -d args for more debug info\n"
 "\n"
 "  -h --help shows this message\n"
+#ifdef VG_GDBSCRIPTS_DIR
 "  The GDB python code defining GDB front end valgrind commands is:\n       %s\n"
+#endif
 "  To get help from the Valgrind gdbserver, use vgdb help\n"
-"\n", vgdb_prefix_default(), VG_LIBDIR "/valgrind-monitor.py"
-           );
+"\n", vgdb_prefix_default()
+#ifdef VG_GDBSCRIPTS_DIR
+    , VG_GDBSCRIPTS_DIR "/valgrind-monitor.py"
+#endif
+   );
    invoker_restrictions_msg();
 }
 
